# bamboo_podcast_metadata

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  uri.rs
src/entities/: chapter.rs  episode.rs  mod.rs  show.rs
